messed around with editing the bundle to see where the changes are done, and how can be used.  Also started to try and use more prime faces.

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -5,9 +5,9 @@ Next=Next
 MenuCreated=Menu was successfully created.
 MenuUpdated=Menu was successfully updated.
 MenuDeleted=Menu was successfully deleted.
-CreateMenuTitle=Create New Menu
+CreateMenuTitle=Add new menu item
 CreateMenuSaveLink=Save
-CreateMenuShowAllLink=Show All Menu Items
+CreateMenuShowAllLink=Show Menu
 CreateMenuIndexLink=Index
 CreateMenuLabel_itemId=ItemId:
 CreateMenuRequiredMessage_itemId=The ItemId field is required.
@@ -19,7 +19,7 @@ CreateMenuTitle_itemPrice=ItemPrice
 EditMenuTitle=Edit Menu
 EditMenuSaveLink=Save
 EditMenuViewLink=View
-EditMenuShowAllLink=Show All Menu Items
+EditMenuShowAllLink=Show Menu
 EditMenuIndexLink=Index
 EditMenuLabel_itemId=ItemId:
 EditMenuRequiredMessage_itemId=The ItemId field is required.
@@ -31,7 +31,7 @@ EditMenuTitle_itemPrice=ItemPrice
 ViewMenuTitle=View
 ViewMenuDestroyLink=Destroy
 ViewMenuEditLink=Edit
-ViewMenuCreateLink=Create New Menu
+ViewMenuCreateLink=Add Menu Item
 ViewMenuShowAllLink=Show All Menu Items
 ViewMenuIndexLink=Index
 ViewMenuLabel_itemId=ItemId:
@@ -45,7 +45,7 @@ ListMenuEmpty=(No Menu Items Found)
 ListMenuDestroyLink=Destroy
 ListMenuEditLink=Edit
 ListMenuViewLink=View
-ListMenuCreateLink=Create New Menu
+ListMenuCreateLink=Add Menu Item
 ListMenuIndexLink=Index
 ListMenuTitle_itemId=ItemId
 ListMenuTitle_itemName=ItemName
